# livekit-plugins-realtimestt

./: README.md  pyproject.toml
src/livekit_plugins_realtimestt/: __init__.py  base.py  client.py  embedded.py  log.py  stt.py
